# messageboard

./: README.md
DB/: db_setup.bat  follows.surreal  likes.surreal  notes.txt  post.surreal  posted.surreal  response.surreal  test_data.surreal  user.surreal
WPFClient/: WPFClient.sln
WPFClient/WPFClient/: Commands.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs  Response.cs  ResponseTypes.cs  WPFClient.csproj
leptos-client/: .gitignore  Cargo.toml  Trunk.toml  index.html
leptos-client/public/style/: credential.css  credential.css.map  credential.scss  default.css  default.css.map  default.scss  posts.css  posts.css.map  posts.scss  user.css  user.css.map  user.scss
leptos-client/src/: api.rs  lib.rs  main.rs
leptos-client/src/components/: create_post.rs  credentials.rs  mod.rs  navbar.rs  postview.rs
leptos-client/src/pages/: home.rs  login.rs  mod.rs  posts.rs  register.rs  user.rs
leptos-client/src/types/: mod.rs
server/: .prettierrc  app.ts  helper.ts  routes.ts
server/controllers/: post.ts  security.ts  user.ts
server/models/: user.ts
