[package]
name = "client"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

leptos = { version = "0.2.0-alpha2", features = ["stable"] }
leptos_router = { version = "0.2.0-alpha2", features = ["stable", "csr"] }

log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
gloo-net = "0.2"
gloo-storage = "0.2"
serde = "1.0"
thiserror = "1.0"
base64 = "0.21.0"
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
urlencoding = "2.1.2"
